--- a/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj.filters
+++ b/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj.filters
@@ -23,5 +23,14 @@
     <ClInclude Include="Vector2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Wall.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Brick.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Pad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
