--- a/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj
+++ b/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj
@@ -130,7 +130,10 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Brick.h" />
+    <ClInclude Include="Pad.h" />
     <ClInclude Include="Vector2.h" />
+    <ClInclude Include="Wall.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
