--- a/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj
+++ b/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Ball.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Pad.h" />
     <ClInclude Include="Vector2.h" />
