--- a/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj
+++ b/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj
@@ -127,7 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Pad.cpp" />
+    <ClCompile Include="Vector2.cpp" />
+    <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
