--- a/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj
+++ b/M03UF4_Breakout_6/M03UF4_Breakout_6.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Brick.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Pad.cpp" />
     <ClCompile Include="Vector2.cpp" />
@@ -137,6 +138,7 @@
   <ItemGroup>
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Brick.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="Pad.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Wall.h" />
